# CSV-Reader-TestTask

./: README.md  pyproject.toml
data/: cheaters.db
src/: config.py  main.py  memory_usage.py  sqlite_ops.py
