[tool.poetry]
name = "csv-reader-testtask"
version = "0.1.0"
description = ""
authors = ["DanilaLabydin <labydin2605@mail.ru>"]
readme = "README.md"
packages = [{include = "csv_reader_testtask"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"


[tool.poetry.group.dependencies.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
